# Sick-Lidar

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  package.xml  sick_multiscan.launch
.github/workflows/: ci.yml  pcl-build-mp.yml  sick-scan-xd-build-mp.yml
config/: params.yaml
extra/nt-bridge/: .gitignore  CMakeLists.txt
extra/nt-bridge/src/: main.cpp
include/sick_scan_xd-3.1.0/pcl_converter/: gnuplotPaletteReader.h
include/sick_scan_xd-3.1.0/radar_object_marker/: radar_object_marker.h
include/sick_scan_xd-3.1.0/sick_scan/: abstract_parser.h  binPrintf.hpp  binScanf.hpp  dataDumper.h  sick_cloud_transform.h  sick_generic_callback.h  sick_generic_field_mon.h  sick_generic_imu.h  sick_generic_laser.h  sick_generic_monitoring.h  sick_generic_parser.h  sick_generic_radar.h  sick_lmd_scandata_parser.h  sick_nav_scandata.h  sick_nav_scandata_parser.h  sick_range_filter.h  sick_ros_wrapper.h  sick_scan_base.h  sick_scan_common.h  sick_scan_common_nw.h  sick_scan_common_tcp.h  sick_scan_config_internal.h  sick_scan_marker.h  sick_scan_messages.h  sick_scan_parse_util.h  sick_scan_services.h  softwarePLL.h  template_queue.h
include/sick_scan_xd-3.1.0/sick_scan/helper/: angle_compensator.h
include/sick_scan_xd-3.1.0/sick_scan/ldmrs/: sick_ldmrs_config.hpp  sick_ldmrs_driver.hpp  sick_ldmrs_node.h
include/sick_scan_xd-3.1.0/sick_scan/tcp/: BasicDatatypes.hpp  Mutex.hpp  SickThread.hpp  SopasBase.hpp  Time.hpp  colaa.hpp  colab.hpp  errorhandler.hpp  tcp.hpp  toolbox.hpp  wsa_init.hpp
include/sick_scan_xd-3.1.0/sick_scan_xd_api/: sick_scan_api.h  sick_scan_api_converter.h  sick_scan_api_dump.h
include/sick_scan_xd-3.1.0/sick_scansegment_xd/: common.h  compact_parser.h  config.h  fifo.h  msgpack_converter.h  msgpack_exporter.h  msgpack_parser.h  msgpack_validator.h  ros_msgpack_publisher.h  scansegment_parser_output.h  scansegment_threads.h  time_util.h  udp_poster.h  udp_receiver.h  udp_sockets.h
include/sick_scan_xd-3.1.0/tinyxml/: tinystr.h  tinyxml.h
launch/: ldrp.launch.py  sick_perception.launch.py
lib/ubuntu/build-sickxd/: sick_scan_xd_api_test
lib/ubuntu/sick_scan_xd-3.1.0/build-sickxd/: sick_scan_xd_api_test
lib/windows/Debug/: sick_scan_xd_api_test.exp  sick_scan_xd_shared_lib.exp
lib/windows/Release/: sick_scan_xd_api_test.exp  sick_scan_xd_api_test.lib
lib/windows/msgpack11/Debug/: msgpack11.lib
lib/windows/sick_scan_xd-3.1.0/Debug/: sick_scan_xd_api_test.exp  sick_scan_xd_shared_lib.exp
lib/windows/sick_scan_xd-3.1.0/Release/: sick_scan_xd_api_test.exp  sick_scan_xd_api_test.lib  sick_scan_xd_shared_lib.exp  sick_scan_xd_shared_lib.lib
lib/windows/sick_scan_xd-3.1.0/msgpack11/Debug/: msgpack11.lib
lib/windows/sick_scan_xd-3.1.0/msgpack11/Release/: msgpack11.lib
logs/: scansegment_000000.csv  scansegment_000001.csv  scansegment_000002.csv  scansegment_000003.csv  scansegment_000004.csv  scansegment_000005.csv  scansegment_000006.csv  scansegment_000007.csv  scansegment_000008.csv  scansegment_000009.csv  scansegment_000010.csv  scansegment_000011.csv
src/: filtering.cpp  main.cpp  mem_utils.h  pcd_streaming.h  weight_map.h
src/core/: CMakeLists.txt  accumulator_grid.hpp  accumulator_grid2.hpp  filtering.hpp  grid.hpp  lidar_api.cpp  lidar_api.h  weight_map.h  weight_map.hpp
src/core/slam/dlo/: map.cpp  map_node.cpp  odom.cc  odom.cpp  odom_node.cpp
src/core/slam/include/dlo/: dlo.h  map.h  odom.h
src/core/slam/include/nano_gicp/: lsq_registration.hpp  nano_gicp.hpp  nanoflann.hpp
src/core/slam/include/nano_gicp/gicp/: gicp_settings.hpp  so3.hpp
src/core/slam/include/nano_gicp/impl/: lsq_registration_impl.hpp  nano_gicp_impl.hpp  nanoflann_impl.hpp
src/core/slam/nano_gicp/: lsq_registration.cpp  nano_gicp.cpp  nanoflann.cpp
src/ldrp/: filtering.hpp  grid.hpp  perception.cpp  perception.hpp  timestamp_sampler.hpp
src/shared/: CMakeLists.txt  filtering.cpp  filtering.h  filtering.hpp  lidar_api.cpp  lidar_api.h  mem_utils.h  pcd_streaming.cpp  pcd_streaming.h
submodule-deps/: build-notes.txt
